--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -8,10 +8,15 @@
   box-sizing: border-box;
   padding: 10px 0 0;
   margin-bottom: 10px;
+  padding-left: 5px;
 }
 
 .popup__input:last-of-type {
   margin-bottom: 0;
+}
+
+.popup__input_type_error {
+  border-bottom: 1px solid #FF0000;
 }
 
 @media screen and (max-width: 568px) {
